--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "fastapi>=0.109.0",
     "httpx>=0.26.0",
     "passlib[bcrypt]>=1.7.4",
-    "pydantic>=2.5.3",
+    "pydantic[email]>=2.5.3",
     "pydantic-settings>=2.1.0",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
