--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "python-multipart>=0.0.6",
     "sqlalchemy>=2.0.25",
     "uvicorn[standard]>=0.27.0",
+    "psycopg2>=2.9.11",
 ]
