Implement initial project structure with FastAPI backend, Angular frontend, and comprehensive testing setup.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,6 @@ passlib[bcrypt]>=1.7.4
 httpx>=0.26.0
 redis>=5.0.1
 fastapi-limiter<0.2.0
+pytest>=7.4.0
+pytest-asyncio>=0.23.0
+pytest-mock>=3.12.0
